<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/petIds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/pet_id_hint"
            android:hint="@string/pet_id_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/orange"
            android:text="@string/send_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/pulling_up"
            app:srcCompat="@android:drawable/ic_dialog_email" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>